# chicken-coop

./: README.md
archive/chicken-coop-arduino/src/: accel_stepper.cpp  conf.h  main.cpp  open_close_times.h
archive/chicken-coop-pi/: requirements.txt
chicken-coop-arduino/: platformio.ini
chicken-coop-arduino/src/: accel_stepper.cpp  conf.h  main.cpp  open_close_times.cpp  rtc.cpp  stepper.cpp
chicken-coop-esp/: .cproject  CMakeLists.txt  chicken-coop-esp.launch  sdkconfig  sdkconfig.defaults  sdkconfig.old
chicken-coop-esp/eclipse/: .cproject  .project
chicken-coop-esp/main/: CMakeLists.txt  Kconfig.projbuild  compile_time.h  conf.h  control.cpp  control.h  led.cpp  led.h  legacyMotor.cpp  legacyMotor.h  main.cpp  main.h  motor.cpp  motor.h  motorDefs.h  open_close_times.cpp  open_close_times.h  switch.cpp  switch.h  usr_config.h.in
chicken-coop-pi/: main.py
client/: client.py  config.ini  requirements.txt  ser.py
client/.run/: client.run.xml
client/mod/: ser.py
client/template/: config.ini
scripts/: apply-clang-format.sh  open_close_times.cpp  open_close_times.csv  open_close_times.h  open_close_times.py  sun-times-to-code.py
